

CREATE SCHEMA IF NOT EXISTS point;
set schema point;

-- 1. 포인트 이벤트 원장 (point_event_mst)
CREATE TABLE point_event_mst (
                                 point_event_key BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                 point_event_name VARCHAR(100) NOT NULL,
                                 point_accu_type CHAR(1) DEFAULT '1' NOT NULL,
                                 expire_days INT DEFAULT 365 NOT NULL,
                                 max_unit_point BIGINT NOT NULL
);

COMMENT ON TABLE point_event_mst IS '포인트 이벤트 원장';
COMMENT ON COLUMN point_event_mst.point_event_key IS '포인트 이벤트 KEY';
COMMENT ON COLUMN point_event_mst.point_event_name IS '포인트 이벤트 이름';
COMMENT ON COLUMN point_event_mst.point_accu_type IS '1:일반,2:관리자 수기지급';
COMMENT ON COLUMN point_event_mst.expire_days IS '유효기간 일자';
COMMENT ON COLUMN point_event_mst.max_unit_point IS '1회 최대포인트';





-- 2. 포인트 적립 원장 (point_accu_mst)
CREATE TABLE point_accu_mst (
                                point_key BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                point_event_key BIGINT NOT NULL,
                                order_no BIGINT DEFAULT 0 NOT NULL,
                                org_point_key BIGINT DEFAULT 0 NOT NULL,
                                accu_date DATE NOT NULL,
                                expire_date DATE NOT NULL,
                                user_no BIGINT NOT NULL,
                                accu_point BIGINT DEFAULT 0 NOT NULL,
                                accu_cancel_yn CHAR(1) DEFAULT 'N' NOT NULL,
                                balance_point BIGINT DEFAULT 0 NOT NULL
);

COMMENT ON TABLE point_accu_mst IS '포인트 적립 원장';
COMMENT ON COLUMN point_accu_mst.point_key IS '포인트KEY';
COMMENT ON COLUMN point_accu_mst.point_event_key IS '포인트 이벤트 KEY';
COMMENT ON COLUMN point_accu_mst.order_no IS '(적립을 하게된 계기의) 주문번호';
COMMENT ON COLUMN point_accu_mst.org_point_key IS '원 포인트 적립번호. 유효기간 경과된 건 사용취소시 적립';
COMMENT ON COLUMN point_accu_mst.accu_date IS '적립일자';
COMMENT ON COLUMN point_accu_mst.expire_date IS '만료일자';
COMMENT ON COLUMN point_accu_mst.user_no IS '사용자 번호';
COMMENT ON COLUMN point_accu_mst.accu_point IS '적립 포인트';
COMMENT ON COLUMN point_accu_mst.accu_cancel_yn IS '적립 취소 여부';
COMMENT ON COLUMN point_accu_mst.balance_point IS '포인트 잔액';


-- 3. 포인트 주문 사용 히스토리 (point_order_use_hst)
CREATE TABLE point_order_use_hst (
                                     point_order_use_no BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                     use_order_no BIGINT NOT NULL,
                                     trade_dt TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,
                                     point_trade_type CHAR(1) NOT NULL,
                                     user_no BIGINT NOT NULL,
                                     point BIGINT NOT NULL
);

COMMENT ON TABLE point_order_use_hst IS '포인트 주문 사용 히스토리';
COMMENT ON COLUMN point_order_use_hst.point_order_use_no IS '포인트 사용 기록 번호';
COMMENT ON COLUMN point_order_use_hst.use_order_no IS '포인트 사용 주문번호';
COMMENT ON COLUMN point_order_use_hst.trade_dt IS '거래일시';
COMMENT ON COLUMN point_order_use_hst.point_trade_type IS 'P:사용 C:사용취소 ';
COMMENT ON COLUMN point_order_use_hst.user_no IS '사용자 번호';
COMMENT ON COLUMN point_order_use_hst.point IS '(사용 또는 사용취소) 포인트';


-- 4. 포인트 사용-적립 매핑 (point_order_use_map)
CREATE TABLE point_order_use_map (
                                     point_order_use_map_no BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                     point_order_use_no BIGINT DEFAULT NULL,
                                     point_key BIGINT DEFAULT NULL,
                                     point BIGINT DEFAULT NULL
);

COMMENT ON TABLE point_order_use_map IS '포인트 사용-적립 매핑';
COMMENT ON COLUMN point_order_use_map.point_order_use_map_no IS '번호';
COMMENT ON COLUMN point_order_use_map.point_order_use_no IS '포인트 사용 기록 번호';
COMMENT ON COLUMN point_order_use_map.point_key IS '포인트 적립 번호';
COMMENT ON COLUMN point_order_use_map.point IS '포인트';





CREATE SCHEMA IF NOT EXISTS dms;
set schema dms;

CREATE TABLE user_mst (
                          user_no BIGINT  PRIMARY KEY,
                          user_id varchar(30) not NULL,
                          user_name varchar(100) not NULL
);



COMMENT ON TABLE user_mst IS '사용자 원장(DMS설명용)';
COMMENT ON COLUMN user_mst.user_no IS '사용자 번호';
COMMENT ON COLUMN user_mst.user_id IS '사용자 아이디';
COMMENT ON COLUMN user_mst.user_name IS '사용자 이름';

